Fixed the navigation bar by changing the line size for the string "Mashweb.Club". Fixed the readability of the carousel captions by fixed-sizing the carousel images and using 50% opacity for the captions. Set minimum and maximum widths.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,3 +1,12 @@
+body {
+    max-width: 1280px;
+    min-width: 320px;
+}
+
+.navbar-fixed-top {
+    max-width: 1280px !important;
+}
+
 @media (max-width: 992px) {
     .navbar-header {
         float: none;
@@ -33,4 +42,18 @@
     .collapse.in{
         display:block !important;
     }
+}
+
+.carousel-caption {
+    background: rgba(0, 0, 0, 0.5);
+    padding-top: 0px;
+}
+
+.carousel-caption > h3 {
+    margin: 0px;
+}
+
+.carousel-inner > .item > img {
+    width:100%;
+    height:208px;
 }
